--- a/server/testcode.ipynb
+++ b/server/testcode.ipynb
@@ -411,7 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,8 +428,11 @@
     "    for i, row in results.iterrows():\n",
     "        localSum = 0\n",
     "        for percentage in percentages:\n",
-    "            diff = row[percentage] - percentages[percentage]\n",
+    "            diff = (row[percentage] - percentages[percentage])**2\n",
     "            localSum = localSum + diff\n",
+    "        \n",
+    "        if (i == 0):\n",
+    "            diffSum = localSum\n",
     "    \n",
     "        if (diffSum > localSum):\n",
     "            diffSum = localSum\n",
@@ -433,16 +443,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found smaller\n",
+      "found smaller\n",
+      "found smaller\n",
+      "found smaller\n",
+      "found smaller\n",
+      "found smaller\n",
+      "found smaller\n",
+      "found smaller\n",
+      "found smaller\n",
+      "found smaller\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'TRAPLKT128F4236144'"
+       "'TRAOINO128F930FF1D'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,6 +477,13 @@
     "theSong = getSongByPercentages(percentages)\n",
     "theSong"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
